test/libsolidity/syntaxTests/pragma/invalid_range_operator_range_two_ranges.sol
pragma solidity 0.8.14 || 0.8.17 - >0.8.20;
// ----
// ParserError 1684: (0-43): Invalid version pragma. You cannot use operators (<, <=, >=, >, ^) with version ranges (-).
